--- a/msvs/neosphere.vcxproj.filters
+++ b/msvs/neosphere.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="..\src\neosphere\source_map.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\neosphere\steam_win.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\shared\dyad.h">
@@ -327,6 +330,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\neosphere\source_map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\neosphere\steam_win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
