--- a/msvs/neosphere.vcxproj
+++ b/msvs/neosphere.vcxproj
@@ -267,7 +267,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="..\src\neosphere\event_loop.c" />
     <ClCompile Include="..\src\neosphere\module.c" />
     <ClCompile Include="..\src\neosphere\source_map.c" />
-    <ClCompile Include="..\src\neosphere\steam_win.c" />
+    <ClCompile Include="..\src\neosphere\steam.c" />
     <ClCompile Include="..\src\shared\compress.c" />
     <ClCompile Include="..\src\neosphere\legacy.c" />
     <ClCompile Include="..\src\neosphere\profiler.c" />
@@ -320,7 +320,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="..\src\neosphere\event_loop.h" />
     <ClInclude Include="..\src\neosphere\module.h" />
     <ClInclude Include="..\src\neosphere\source_map.h" />
-    <ClInclude Include="..\src\neosphere\steam_win.h" />
+    <ClInclude Include="..\src\neosphere\steam.h" />
     <ClInclude Include="..\src\shared\compress.h" />
     <ClInclude Include="..\src\neosphere\legacy.h" />
     <ClInclude Include="..\src\neosphere\profiler.h" />
