--- a/msvs/neosphere.vcxproj.filters
+++ b/msvs/neosphere.vcxproj.filters
@@ -165,7 +165,7 @@
     <ClCompile Include="..\src\neosphere\source_map.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\neosphere\steam_win.c">
+    <ClCompile Include="..\src\neosphere\steam.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -332,7 +332,7 @@
     <ClInclude Include="..\src\neosphere\source_map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\neosphere\steam_win.h">
+    <ClInclude Include="..\src\neosphere\steam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
