--- a/msvs/neosphere.vcxproj
+++ b/msvs/neosphere.vcxproj
@@ -216,7 +216,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ChakraCore.lib;libmng.lib;zlib.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ChakraCore.lib;libmng.lib;zlib.lib;ws2_32.lib;%(AdditionalDependencies);yogacore.lib</AdditionalDependencies>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
       <AdditionalLibraryDirectories>lib;..\dep\lib</AdditionalLibraryDirectories>
@@ -266,6 +266,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="..\src\neosphere\blend_op.c" />
     <ClCompile Include="..\src\neosphere\event_loop.c" />
     <ClCompile Include="..\src\neosphere\module.c" />
+    <ClCompile Include="..\src\neosphere\node.c" />
     <ClCompile Include="..\src\neosphere\source_map.c" />
     <ClCompile Include="..\src\neosphere\steam.c" />
     <ClCompile Include="..\src\shared\compress.c" />
@@ -319,6 +320,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="..\src\neosphere\blend_op.h" />
     <ClInclude Include="..\src\neosphere\event_loop.h" />
     <ClInclude Include="..\src\neosphere\module.h" />
+    <ClInclude Include="..\src\neosphere\node.h" />
     <ClInclude Include="..\src\neosphere\source_map.h" />
     <ClInclude Include="..\src\neosphere\steam.h" />
     <ClInclude Include="..\src\shared\compress.h" />
