--- a/msvs/neosphere.vcxproj.filters
+++ b/msvs/neosphere.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="..\src\neosphere\steam.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\neosphere\node.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\shared\dyad.h">
@@ -333,6 +336,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\neosphere\steam.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\neosphere\node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
