--- a/msvs/neosphere.vcxproj
+++ b/msvs/neosphere.vcxproj
@@ -226,7 +226,7 @@ xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
     <PostBuildEvent>
       <Command>xcopy /y /d /e /f "..\assets\*" "$(OutDir)"
 xcopy /y /d /e /f "..\docs\*-api.txt" "$(OutDir)documentation\"
-xcopy /y /d /e /f "..\dep\lib\*.dll" "$(OutDir)"</Command>
+xcopy /y /d /e /f "..\dep\lib\*" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">
