--- a/msvs/ssj.vcxproj.filters
+++ b/msvs/ssj.vcxproj.filters
@@ -134,4 +134,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
