--- a/msvs/packages.config
+++ b/msvs/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Allegro" version="5.2.9" targetFramework="native" />
-  <package id="AllegroDeps" version="1.14.0" targetFramework="native" />
+  <package id="Allegro" version="5.2.10-nightly.20240817" targetFramework="native" />
+  <package id="AllegroDeps" version="1.15.0-nightly.20240817" targetFramework="native" />
 </packages>
